# lastfm_api_pipeline

./: .gitignore  README.md  dashboard.py  dockerfile  main.py  prefect-email-Block.py  prefect.yaml  prefect_flow.py  pyproject.toml
app/: analysis.py  config.py  decorators.py  models.py  schemas.py  sessions.py
app/services/: lastfmclient.py  run_pipeline.py  trackloader.py  tracktransformer.py
data/: genres.csv
prefect/: prefect_flow.py
prefect-deployment/: deployment.yaml  prefect_flow.py
prefect_deployment/: deployment.yaml  prefect_flow.py
tests/: conftest.py  load_orm.py  mock_api_responses.py
tests/integration/: test_integration.py  test_trackloader_dependencies.py
tests/unit /: test_lastfmclient.py  test_trackloader.py  test_tracktransformer.py
