[project]
name = 'etl-lastfm'
version = '0.1.0'
description = "\"\""
authors = [
    {name = "Rania",email = "Rania.epro@gmail.com"}
]
license = {text = "\"\""}
readme = ""
requires-python = ">=3.12,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.3)",
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-postgresql (>=7.0.2,<8.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest-dependency (>=0.6.0,<0.7.0)",
    "prefect (>=3.4.6,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
